image insertion task completed

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet" />
+    <!-- document.head.children[1].innerText -->
     <title>Цей текст треба замінити за допомогою javascript</title>
     <meta charset="utf-8"/>
   </head>
@@ -9,10 +10,13 @@
     <table class="mainTable" cellspacing="0" cellpadding="0">
       <tbody>
         <tr>
+          <!-- document.body.children[0].children[0].children[0].children[0].innerText -->
           <th class="mainTable__header" colspan="2">І цей текст треба замінити за допомогою javascript</th>
         </tr>
         <tr>
+          <!-- document.body.children[0].children[0].children[1].children[0].innerText -->
           <td class="mainTable__image">тут треба вставити зображення</td>
+          <!-- document.body.children[0].children[0].children[1].children[1].innerText -->
           <td class="mainTable__content">
             Заверстати тут довільний HTML\css на свій розсуд.
           </td>
