Task 3 - addding a table to 'mainTable__content'

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <table class="mainTable" cellspacing="0" cellpadding="0">
       <tbody>
         <tr>
-          <!-- document.body.children[0].children[0].children[0].children[0].innerText -->
           <th class="mainTable__header" colspan="2">І цей текст треба замінити за допомогою javascript</th>
         </tr>
         <tr>
-          <!-- document.body.children[0].children[0].children[1].children[0].innerText -->
-          <td class="mainTable__image">тут треба вставити зображення</td>
-          <!-- document.body.children[0].children[0].children[1].children[1].innerText -->
+          <td class="mainTable__image">
+            тут треба вставити зображення
+          </td>
           <td class="mainTable__content">
             Заверстати тут довільний HTML\css на свій розсуд.
           </td>
